# dispenser

./: .cproject  .gitignore  .project  CMakeLists.txt  sdkconfig
main/: .cproject  CMakeLists.txt  FileSystem.cpp  Formatter.cpp  Formatter.hpp  GlobalDefines.hpp  InputsOutputs.cpp  InputsOutputs.hpp  JsonFormatter.cpp  JsonFormatter.hpp  TaskManager.cpp  TaskManager.hpp  TcpService.cpp  TcpService.hpp  UartsFunctions.cpp  UartsFunctions.hpp  WebApiConsumer.cpp  WiFiService.cpp  WiFiService.hpp  main.cpp
main/includes/: FileSystem.hpp  Formatter.hpp  GlobalDefines.hpp  InputsOutputs.hpp  MemoryKeys.hpp  TcpService.hpp  UartsFunctions.hpp  WebApiConsumer.hpp  WiFiService.hpp  utilsDefines.hpp
main/includes/domain/database/: Formatter.hpp
main/includes/domain/database/localstorage/: LocalStorage.hpp
main/includes/domain/entities/: date.hpp  device.hpp  gpio.hpp
main/includes/domain/network/: INetwork.hpp  TcpIp.hpp  WifiInterface.hpp
main/includes/domain/network/ethernet/: Ethernet.hpp
main/includes/domain/network/protocols/: INetworkProtocol.hpp  ITcpProtocol.hpp  IUdpProtocol.hpp
main/includes/domain/network/wifi/: Wifi.hpp
main/includes/domain/network/wifi/modes/: IWifiMode.hpp  ModeAp.hpp  ModeApSta.hpp  ModeSta.hpp
main/source/database/: Formatter.cpp
main/source/database/localstorage/: LocalStorage.cpp
main/source/network/protocols/: TcpProtocol.cpp  UdpProtocol.cpp
main/source/network/wifi/: Wifi.cpp
main/source/network/wifi/modes/: WifiModeAp.cpp  WifiModeApSta.cpp  WifiModeSta.cpp
